--- a/template.yaml
+++ b/template.yaml
@@ -7,7 +7,7 @@ metadata:
   description: Create a documentation site only
 spec:
   owner: user:pwalleni
-  type: website
+  type: library
 
   # these are the steps which are rendered in the frontend with the form input
   parameters:
