--- a/template.yaml
+++ b/template.yaml
@@ -29,7 +29,7 @@ spec:
           ui:field: OwnerPicker
           ui:options:
             allowedKinds:
-              - Group
+              - User
     - title: Choose a location
       required:
         - repoUrl
@@ -41,6 +41,8 @@ spec:
           ui:options:
             allowedHosts:
               - github.com
+            allowedOwners:
+              - pwalleni
 
   # here's the steps that are executed in series in the scaffolder backend
   steps:
