hardcode allowed owner of repo

--- a/template.yaml
+++ b/template.yaml
@@ -47,6 +47,8 @@ spec:
           ui:options:
             allowedHosts:
               - github.com
+            allowedOwners:
+              - pwalleni
 
   steps:
     - id: fetch
