rename template dir to skeleton

--- a/template.yaml
+++ b/template.yaml
@@ -55,7 +55,7 @@ spec:
       name: Template Docs Skeleton
       action: fetch:template
       input:
-        url: ./template
+        url: ./skeleton
         values:
           name: ${{ parameters.name }}
           description: ${{ parameters.description }}
